--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@tabler/icons-react": "^3.33.0",
     "framer-motion": "^12.12.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "swiper": "^11.2.10"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
